CM-2.11: Сгруппировать ручки в сваггере по тэгу
